# when-gradients-collide

./: .env.example  .gitignore  EXPERIMENTS.md  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt
expt/: dataset.py  runner.py  setup_datasets.py
expt/BRIGHTER/: BRIGHTER-test.parquet  BRIGHTER-train.parquet
expt/SummEval/: SummEval-test.parquet  SummEval-train.parquet
expt/WildGuard/: WildGuard-test.parquet  WildGuard-train.parquet
expt/configs/: llm.json
scripts/: download_results.py  eval_feedback_adherence.py  eval_gradient_specificity.py  make_main_results_table.py  plot_gradient_specificity.py  plot_trajectories.py  run_cherrypick.py  run_decomposition_modes.py  smoke_test.py
smoke_test_output/: eval_step_0.parquet  eval_step_1.parquet  eval_step_2.parquet  run_summary.json  steps_summary.jsonl
smoke_test_output/run_logs/: step_0000.parquet  step_0001.parquet  step_0002.parquet
src/prompt_moo/: __init__.py  analysis.py  config.py  exceptions.py  gradient_computer.py  llm_utils.py  loss_computer.py  metrics.py  (+6 more)
tests/: conftest.py  plot_gradient_specificity.py  plot_hparam_metrics.py  plot_textgrad_hparam_metrics.py  plot_textgrad_mode_metrics.py  run_brighter_ssc_mae.py  run_mae_runs_1_2.py  run_mae_runs_2_3.py  run_nogate_and_singletask.py  run_nogate_runs_2_3.py  test_algorithm_base.py  test_algorithm_temperatures.py  test_analysis.py  test_config.py  test_data_structures.py  test_e2e.py  test_e2e_textgrad_modes.py  test_e2e_unified.py  test_eval_schedule.py  test_experiment_config.py  test_gpo.py  test_gpo_similarity.py  test_llm_worker.py  test_metrics.py  test_observability.py  test_opro.py  test_parse_instructions.py  test_pe2.py  test_prompt_template.py  test_runner.py  test_task_output_spec.py  test_task_predictor.py  test_textgrad.py  test_textgrad_strategies.py  test_trajectory.py
(+32 files in other folders)
